// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Components: TimePicker > should render correctly 1`] = `
<div>
  <div
    class="ring-time-picker"
    style="position: relative; display: inline-flex;"
  >
    <div
      class="MuiFormControl-root MuiPickersTextField-root css-dw2vup-MuiFormControl-root-MuiPickersTextField-root"
      data-testid="ring-timepicker"
    >
      <div
        aria-invalid="false"
        class="MuiPickersInputBase-root MuiPickersFilledInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedStart css-lwzpzt-MuiPickersInputBase-root-MuiPickersInput-root"
        role="group"
      >
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-wt76vb-MuiInputAdornment-root"
        >
          <span
            aria-hidden="true"
            class="notranslate"
          >
            ​
          </span>
          <button
            aria-label="Choose time"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-umkvbu-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="ClockIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
              <path
                d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
              />
            </svg>
          </button>
        </div>
        <div
          class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-ka3j6r-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer"
          contenteditable="false"
          tabindex="0"
        >
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="0"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Hours"
              aria-readonly="false"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="0"
            >
              hh
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              :
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="1"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Minutes"
              aria-readonly="false"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              mm
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
               
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="2"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Meridiem"
              aria-readonly="false"
              aria-valuemax="1"
              aria-valuemin="0"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="text"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              aa
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
          </span>
        </div>
        <input
          aria-hidden="true"
          class="MuiPickersInputBase-input MuiPickersFilledInput-input css-31lcvl-MuiPickersInputBase-input"
          id="_r_1_"
          tabindex="-1"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Components: TimePicker > should render correctly with custom labels 1`] = `
<div>
  <div
    class="ring-time-picker"
    style="position: relative; display: inline-flex;"
  >
    <div
      class="MuiFormControl-root MuiPickersTextField-root css-dw2vup-MuiFormControl-root-MuiPickersTextField-root"
      data-testid="ring-timepicker"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard css-1tjmaom-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        for="_r_5_"
        id="_r_5_-label"
      >
        Custom Date
      </label>
      <div
        aria-invalid="false"
        aria-labelledby="_r_5_-label"
        class="MuiPickersInputBase-root MuiPickersFilledInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedStart css-lwzpzt-MuiPickersInputBase-root-MuiPickersInput-root"
        role="group"
      >
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-wt76vb-MuiInputAdornment-root"
        >
          <span
            aria-hidden="true"
            class="notranslate"
          >
            ​
          </span>
          <button
            aria-label="Choose time"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-umkvbu-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="ClockIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
              <path
                d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
              />
            </svg>
          </button>
        </div>
        <div
          class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-ka3j6r-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer"
          contenteditable="false"
          tabindex="0"
        >
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="0"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Hours"
              aria-readonly="false"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="0"
            >
              hh
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              :
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="1"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Minutes"
              aria-readonly="false"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              mm
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
               
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="2"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Meridiem"
              aria-readonly="false"
              aria-valuemax="1"
              aria-valuemin="0"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="text"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              aa
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
          </span>
        </div>
        <input
          aria-hidden="true"
          class="MuiPickersInputBase-input MuiPickersFilledInput-input css-31lcvl-MuiPickersInputBase-input"
          id="_r_5_"
          tabindex="-1"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Components: TimePicker > should render correctly with default value 1`] = `
<div>
  <div
    class="ring-time-picker"
    style="position: relative; display: inline-flex;"
  >
    <div
      class="MuiFormControl-root MuiPickersTextField-root css-kbmkdb-MuiFormControl-root-MuiPickersTextField-root"
      data-testid="ring-timepicker"
    >
      <div
        aria-invalid="false"
        class="MuiPickersInputBase-root MuiPickersFilledInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedStart MuiPickersInputBase-adornedEnd css-lwzpzt-MuiPickersInputBase-root-MuiPickersInput-root"
        role="group"
      >
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-wt76vb-MuiInputAdornment-root"
        >
          <span
            aria-hidden="true"
            class="notranslate"
          >
            ​
          </span>
          <button
            aria-label="Choose time, selected time is 12:00 PM"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-umkvbu-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="ClockIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
              <path
                d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
              />
            </svg>
          </button>
        </div>
        <div
          class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-ka3j6r-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer"
          contenteditable="false"
          tabindex="0"
        >
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="0"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Hours"
              aria-readonly="false"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuenow="12"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="0"
            >
              12
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              :
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="1"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Minutes"
              aria-readonly="false"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="0"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              00
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
               
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="2"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Meridiem"
              aria-readonly="false"
              aria-valuemax="1"
              aria-valuemin="0"
              aria-valuenow="1"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="text"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              PM
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
          </span>
        </div>
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-1g27vwb-MuiInputAdornment-root"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium clearButton css-jqd0wj-MuiButtonBase-root-MuiIconButton-root"
            tabindex="-1"
            title="Clear"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q1akcw-MuiSvgIcon-root"
              data-testid="ClearIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
        <input
          aria-hidden="true"
          class="MuiPickersInputBase-input MuiPickersFilledInput-input css-31lcvl-MuiPickersInputBase-input"
          id="_r_9_"
          tabindex="-1"
          value="12:00 PM"
        />
      </div>
    </div>
  </div>
</div>
`;
